plugin/tests/snapshots/render_snapshots__render_sidebar_list_medium_pane_drops_separator_keeps_header.snap
---
source: tests/render_snapshots.rs
expression: "render_to_string(&s, 7, 80)"
---
[?1049h[H[2J[1m[36m zelligent ─────────────────────────────────────────────────────────────────────[0m
[36m▌[0m [1m[36mbranch-0                                                                    [0m  
[36m▌[0m [2mbranch: branch-0                                                            [0m

  [2m↑/↓[0m  [2mEnter[0m open  [2mr[0m refresh
  [2mn[0m pick  [2mi[0m new  [2md[0m remove
  [2mVERSION                                                             [0m
