plugin/tests/snapshots/render_snapshots__render_sidebar_with_local_row.snap
---
source: tests/render_snapshots.rs
expression: "render_to_string(&s, 20, 44)"
---
[?1049h[H[2J[1m[36m zelligent ─────────────────────────────────[0m

  local                                     
  [2mcurrent repo                            [0m
[36m▌[0m [1m[36magent-test-mouse                        [0m  
[36m▌[0m [2mbranch: agent/test-mouse                [0m











  [2m↑/↓[0m  [2mEnter[0m open  [2mr[0m refresh
  [2mn[0m pick  [2mi[0m new  [2md[0m remove
  [2mVERSION                         [0m
