plugin/tests/snapshots/render_snapshots__render_sidebar_with_redundant_branch_shows_subtitle_text.snap
---
source: tests/render_snapshots.rs
expression: "render_to_string(&s, 20, 80)"
---
[?1049h[H[2J[1m[36m myrepo ────────────────────────────────────────────────────────────────────────[0m

[36m▌[0m feature-a                                                                     
[36m▌[0m [2mbranch: feature-a                                                           [0m
  feature-cool                                                                  
  [2mbranch: feature/cool                                                        [0m












  [2m↑/k[0m up  [2m↓/j[0m down  [2mEnter[0m open  [2mn[0m branch  [2mi[0m new  [2md[0m remove  [2mr[0m refresh
  [2mVERSION                                                             [0m
