plugin/tests/snapshots/render_snapshots__render_worktree_list_scrolling.snap
---
source: tests/render_snapshots.rs
expression: "render_to_string(&s, 10, 80)"
---
[1m[36m zelligent:  ───────────────────────────────────────────────────────────────────[0m

   branch-11 [0m
   branch-12 [0m
   branch-13 [0m
   branch-14 [0m
  [7m branch-15 [0m

  [2m↑/k[0m up  [2m↓/j[0m down  [2mEnter[0m open  [2mn[0m branch  [2mi[0m new  [2md[0m remove  [2mr[0m refresh  [2mq[0m quit
  [2m0.0.0-dev+b60fe63[0m
